# squaresplosion

./: .gitignore  README.md  run.sh
backend/: Cargo.toml  aspirational_task_diagram.drawio  potential.md  readme.md
backend/src/: internal_messages.rs  main.rs  state.rs  types.rs  ws_messages.rs
backend/src/tasks/: conn_reader.rs  conn_writer.rs  event_broker.rs  mod.rs
devca/: devcacert.pem  devcakey.pem  gen.sh  gen_certs.sh  index.txt  install_mac_firefoxdev.sh  install_ubuntu_firefox.sh  localhostcert.csr  localhostcert.pem  localhostkey.pem  openssl-ca-signing.cnf  openssl-ca.cnf  openssl-localhost.cnf  policies.json
frontend/: canvas.html  default.html  game.js  general.js  grid.js  index.html  roomGeneration.js  splode.html  styles.css  websocket.js
