[package]
name = "squaresplosion"
version = "0.1.0"
authors = ["Grant Orndorff <orndorffgrant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
async-tungstenite = "0.4.2"
futures = "0.3.4"
serde_json = "1.0"
serde = { version = "1.0.110", features = ['derive'] }
log = "0.4.8"
pretty_env_logger = "0.4.0"

